# irsl_mobile_arm

./: CMakeLists.txt  README.md  dummy_odom.py  dummy_odom_node.py  move_base.launch  odom_trajectory_to_twist_server.py  package.xml  robot_interface.yaml  robotinterface.yaml  run_gazebo.launch  simple_move.dummy_odom.urdf  simple_move.urdf  static_map_navigation.launch
config/: robot_interface.arm.yaml  robot_interface.yaml  roscontrol_config.yaml  simple_move.rviz  teleop_webjoy.config.yaml
docker/: Dockerfile.add_irsl_ws  README.md  build.sh  compose-linux-gpu.yaml  compose-linux.yaml  compose-web-linux-gpu.yaml  compose-web-linux.yaml  compose-web-win.yaml  compose-win.yaml
launch/: joy.launch  move_base.launch  run_base.launch  run_gazebo.launch  run_realrobot.launch  static_map_navigation.launch  teleop_webjoy.launch  urg_node.launch
model/: BodyBuilder_GRIPPER0_lk.dae  BodyBuilder_GRIPPER0_lk.stl  BodyBuilder_GRIPPER1_lk.dae  BodyBuilder_GRIPPER1_lk.stl  arm.body  arm.urdf  base.urdf.xacro  base_arm.body  base_arm.py  base_arm.urdf  base_arm.urdf.xacro  gazebo_plugins.xacro  gripper_plate.scen  make_arm.py  simple_move.body  simple_move.urdf
node/: odom_trajectory_to_twist_server.py
notebooks/: base_sample.ipynb  image_sample.ipynb  mobile_arm_sample.ipynb  yellow_base_sample.ipynb
script/: make_plan_sample.py
world/: aero_shelf.world
